--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# LaTex files
+*.aux
+*.fdb_latexmk
+*.fls
+*.out
+*.gz
+*.toc
+
+# LaTex draft
+draft/
+src/
